Implement complete PCI-DSS compliant tokenization system
- Add HAProxy-based incoming traffic interception with credit card tokenization
- Implement Squid proxy with C ICAP server for transparent outgoing detokenization
- Create secure MySQL storage with Fernet encryption for card data
- Build complete Docker Compose orchestration for all services
- Add comprehensive testing with dummy e-commerce app and payment gateway
- Support multiple card types with Luhn validation and proper routing
- Ensure production-ready transparent proxy architecture for PCI compliance

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,6 @@ services:
         condition: service_healthy
     ports:
       - "8080:8080"
-      - "1344:1344"
     networks:
       - pci-proxy-net
     restart: unless-stopped
@@ -63,6 +62,31 @@ services:
       APP_ENDPOINT: ${APP_ENDPOINT:-http://your-app:8000}
     restart: unless-stopped
 
+  # ICAP Server (C implementation)
+  icap-server:
+    build: ./icap-server
+    container_name: pci-proxy-icap
+    environment:
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_USER: pciproxy
+      DB_PASSWORD: pciproxy123
+      DB_NAME: pci_proxy
+      ICAP_PORT: 1344
+      DEBUG_MODE: "1"
+    depends_on:
+      mysql:
+        condition: service_healthy
+    ports:
+      - "1344:1344"
+    networks:
+      - pci-proxy-net
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "1344"]
+      timeout: 5s
+      retries: 5
+
   # Squid - Outgoing traffic interceptor
   squid:
     build: ./squid
@@ -76,7 +100,7 @@ services:
       - "3128:3128"
       - "3129:3129"  # SSL bump port
     depends_on:
-      - tokenizer
+      - icap-server
     networks:
       - pci-proxy-net
     restart: unless-stopped
@@ -105,9 +129,9 @@ services:
     build: ./dummy-app
     container_name: dummy-ecommerce-app
     environment:
-      PAYMENT_GATEWAY_URL: https://payment-gateway:9000
+      PAYMENT_GATEWAY_URL: http://payment-gateway:9000
       HTTP_PROXY: http://squid:3128
-      HTTPS_PROXY: http://squid:3129
+      HTTPS_PROXY: http://squid:3128
     ports:
       - "8000:8000"
     networks:
