--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -2,7 +2,7 @@ global
     daemon
     maxconn 4096
     log stdout local0
-    stats socket /var/run/haproxy.sock mode 660 level admin
+    # stats socket /var/run/haproxy.sock mode 660 level admin
     tune.ssl.default-dh-param 2048
     # Enable Lua for request manipulation
     lua-load /etc/haproxy/tokenize.lua
@@ -23,8 +23,8 @@ frontend pci_proxy_frontend
     bind *:443 ssl crt /etc/haproxy/certs/server.pem
     bind *:80
     
-    # Force HTTPS for security
-    redirect scheme https if !{ ssl_fc }
+    # Force HTTPS for security (disabled for testing)
+    # redirect scheme https if !{ ssl_fc }
     
     # Security headers
     http-response set-header Strict-Transport-Security "max-age=31536000; includeSubDomains"
@@ -48,7 +48,7 @@ backend tokenizer_backend
 # Your actual application backend (receives tokenized requests)
 backend app_backend
     # This is where tokenized requests are forwarded
-    server app1 ${APP_ENDPOINT} check inter 2s rise 2 fall 3
+    server app1 dummy-app:8000 check inter 2s rise 2 fall 3
 
 # Statistics
 listen stats
