--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -9,35 +9,40 @@ cache deny all
 acl SSL_ports port 443
 acl Safe_ports port 80      # http
 acl Safe_ports port 443     # https
+acl Safe_ports port 5000    # payment gateway
+acl Safe_ports port 9000    # payment gateway
 acl CONNECT method CONNECT
-
-# Only allow HTTPS for payment providers
-http_access deny !Safe_ports
-http_access deny CONNECT !SSL_ports
 
 # Local network access
 acl localnet src 10.0.0.0/8
 acl localnet src 172.16.0.0/12
 acl localnet src 192.168.0.0/16
+
+# Only allow safe ports
+http_access deny !Safe_ports
+http_access deny CONNECT !SSL_ports
+
+# Allow local network access
 http_access allow localnet
 
 # ICAP configuration for detokenization
 icap_enable on
 icap_service_revival_delay 30
+icap_preview_enable off
+icap_persistent_connections on
 
 # Request modification service (detokenization)
-icap_service detokenizer reqmod_precache bypass=0 icap://tokenizer:1344/request
-adaptation_access detokenizer allow all
+icap_service pciproxy_req reqmod_precache bypass=0 icap://pci-proxy-icap:1344/reqmod
+adaptation_access pciproxy_req allow all
 
-# Response modification service (tokenization of responses if needed)
-icap_service tokenizer_resp respmod_precache bypass=0 icap://tokenizer:1344/response
-adaptation_access tokenizer_resp allow all
+# Log ICAP transactions for debugging
+icap_log /var/log/squid/icap.log
 
 # SSL bump configuration to inspect HTTPS traffic
-http_port 3129 ssl-bump cert=/etc/squid/certs/squid.pem
-acl step1 at_step SslBump1
-ssl_bump peek step1
-ssl_bump bump all
+# Disabled for now - causing certificate issues
+# http_port 3129 ssl-bump cert=/etc/squid/certs/squid-ca-cert-key.pem
+# ssl_bump peek all
+# ssl_bump bump all
 
 # Whitelist of payment provider domains
 acl payment_providers dstdomain .stripe.com
@@ -48,8 +53,7 @@ acl payment_providers dstdomain .square.com
 acl payment_providers dstdomain .authorize.net
 acl payment_providers dstdomain payment-gateway  # Our dummy gateway
 
-# Only allow connections to whitelisted payment providers
-http_access allow payment_providers
+# Deny everything else
 http_access deny all
 
 # Logging
@@ -64,8 +68,8 @@ maximum_object_size 0 KB
 minimum_object_size 0 KB
 maximum_object_size_in_memory 0 KB
 
-# DNS
-dns_nameservers 8.8.8.8 8.8.4.4
+# DNS - use Docker's internal DNS first
+dns_nameservers 127.0.0.11 8.8.8.8 8.8.4.4
 
 # Forwarding
 forwarded_for off
