Replace all PCI-Proxy references with TokenShield branding
- Update container names from pci-proxy-* to tokenshield-*
- Change database name from pci_proxy to tokenshield
- Replace network name from pci-proxy-net to tokenshield-net
- Update service references in configurations and comments
- Maintain existing database usernames for compatibility
- Ensure no commercial product name conflicts

--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -1,4 +1,4 @@
-# Squid configuration for PCI-Proxy outbound requests
+# Squid configuration for TokenShield outbound requests
 # This handles detokenization when your app makes requests to payment providers
 
 # Basic settings
@@ -32,8 +32,8 @@ icap_preview_enable off
 icap_persistent_connections on
 
 # Request modification service (detokenization)
-icap_service pciproxy_req reqmod_precache bypass=0 icap://pci-proxy-icap:1344/reqmod
-adaptation_access pciproxy_req allow all
+icap_service tokenshield_req reqmod_precache bypass=0 icap://tokenshield-icap:1344/reqmod
+adaptation_access tokenshield_req allow all
 
 # Log ICAP transactions for debugging
 icap_log /var/log/squid/icap.log
