--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
   # MySQL Database
   mysql:
     image: mysql:8.0
-    container_name: pci-proxy-mysql
+    container_name: tokenshield-mysql
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword123
-      MYSQL_DATABASE: pci_proxy
+      MYSQL_DATABASE: tokenshield
       MYSQL_USER: pciproxy
       MYSQL_PASSWORD: pciproxy123
     volumes:
@@ -16,7 +16,7 @@ services:
     ports:
       - "3306:3306"
     networks:
-      - pci-proxy-net
+      - tokenshield-net
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
@@ -25,12 +25,12 @@ services:
   # Tokenizer Service
   tokenizer:
     build: ./tokenizer
-    container_name: pci-proxy-tokenizer
+    container_name: tokenshield-tokenizer
     environment:
       MYSQL_HOST: mysql
       MYSQL_USER: pciproxy
       MYSQL_PASSWORD: pciproxy123
-      MYSQL_DB: pci_proxy
+      MYSQL_DB: tokenshield
       ENCRYPTION_KEY: ${ENCRYPTION_KEY:-your-256-bit-base64-encoded-key-here}
       APP_ENDPOINT: ${APP_ENDPOINT:-http://dummy-app:8000}
     depends_on:
@@ -39,13 +39,13 @@ services:
     ports:
       - "8080:8080"
     networks:
-      - pci-proxy-net
+      - tokenshield-net
     restart: unless-stopped
 
   # HAProxy - Incoming traffic interceptor
   haproxy:
     image: haproxy:2.8-alpine
-    container_name: pci-proxy-haproxy
+    container_name: tokenshield-haproxy
     volumes:
       - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
       - ./haproxy/tokenize.lua:/etc/haproxy/tokenize.lua:ro
@@ -57,7 +57,7 @@ services:
     depends_on:
       - tokenizer
     networks:
-      - pci-proxy-net
+      - tokenshield-net
     environment:
       APP_ENDPOINT: ${APP_ENDPOINT:-http://your-app:8000}
     restart: unless-stopped
@@ -65,13 +65,13 @@ services:
   # ICAP Server (C implementation)
   icap-server:
     build: ./icap-server
-    container_name: pci-proxy-icap
+    container_name: tokenshield-icap
     environment:
       DB_HOST: mysql
       DB_PORT: 3306
       DB_USER: pciproxy
       DB_PASSWORD: pciproxy123
-      DB_NAME: pci_proxy
+      DB_NAME: tokenshield
       ICAP_PORT: 1344
       DEBUG_MODE: "1"
     depends_on:
@@ -80,7 +80,7 @@ services:
     ports:
       - "1344:1344"
     networks:
-      - pci-proxy-net
+      - tokenshield-net
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "nc", "-z", "localhost", "1344"]
@@ -90,7 +90,7 @@ services:
   # Squid - Outgoing traffic interceptor
   squid:
     build: ./squid
-    container_name: pci-proxy-squid
+    container_name: tokenshield-squid
     volumes:
       - ./squid/squid.conf:/etc/squid/squid.conf:ro
       - ./certs:/etc/squid/certs:ro
@@ -102,18 +102,18 @@ services:
     depends_on:
       - icap-server
     networks:
-      - pci-proxy-net
+      - tokenshield-net
     restart: unless-stopped
 
   # Optional: Management API
   api:
     build: ./api
-    container_name: pci-proxy-api
+    container_name: tokenshield-api
     environment:
       MYSQL_HOST: mysql
       MYSQL_USER: pciproxy
       MYSQL_PASSWORD: pciproxy123
-      MYSQL_DB: pci_proxy
+      MYSQL_DB: tokenshield
       ENCRYPTION_KEY: ${ENCRYPTION_KEY:-your-256-bit-base64-encoded-key-here}
     depends_on:
       mysql:
@@ -121,7 +121,7 @@ services:
     ports:
       - "8090:8090"
     networks:
-      - pci-proxy-net
+      - tokenshield-net
     restart: unless-stopped
 
   # Dummy E-commerce Application
@@ -135,7 +135,7 @@ services:
     ports:
       - "8000:8000"
     networks:
-      - pci-proxy-net
+      - tokenshield-net
     depends_on:
       - squid
       - payment-gateway
@@ -148,11 +148,11 @@ services:
     ports:
       - "9000:9000"
     networks:
-      - pci-proxy-net
+      - tokenshield-net
     restart: unless-stopped
 
 networks:
-  pci-proxy-net:
+  tokenshield-net:
     driver: bridge
 
 volumes:
