--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -19,7 +19,7 @@ defaults
     log global
 
 # Frontend - Entry point for all requests to your application
-frontend pci_proxy_frontend
+frontend tokenshield_frontend
     bind *:443 ssl crt /etc/haproxy/certs/server.pem
     bind *:80
     
