Fix HAProxy backend reference to dummy-ecommerce-app
- Correct server reference from dummy-app to dummy-ecommerce-app
- This resolves HAProxy backend connection issues

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -48,7 +48,7 @@ backend tokenizer_backend
 # Your actual application backend (receives tokenized requests)
 backend app_backend
     # This is where tokenized requests are forwarded
-    server app1 dummy-app:8000 check inter 2s rise 2 fall 3
+    server app1 dummy-ecommerce-app:8000 check inter 2s rise 2 fall 3
 
 # Statistics
 listen stats
