Update .env.example with correct container references
- Fix APP_ENDPOINT to use dummy-ecommerce-app container name
- Ensures proper configuration for new users

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 ENCRYPTION_KEY=your-256-bit-base64-encoded-key-here
 
 # Your application endpoint where tokenized requests will be forwarded
-APP_ENDPOINT=http://your-app:8000
+APP_ENDPOINT=http://dummy-ecommerce-app:8000
 
 # Admin secret for creating API keys
 ADMIN_SECRET=change-this-admin-secret
