Fix unified tokenizer database schema compatibility
- Update column names to match actual schema (last_four_digits)
- Add first_six_digits and placeholder expiry date
- Remove created_at from token_requests inserts
- Fix fernet encryption API usage for Go implementation

--- a/unified-tokenizer/Dockerfile
+++ b/unified-tokenizer/Dockerfile
@@ -7,17 +7,13 @@ RUN apk add --no-cache git
 # Set working directory
 WORKDIR /app
 
-# Copy go mod files
-COPY go.mod go.sum* ./
-
-# Download dependencies
-RUN go mod download
-
-# Copy source code
+# Copy all files first
 COPY . .
 
-# Build the application
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o unified-tokenizer .
+# Download dependencies and build
+RUN go mod tidy && \
+    go mod download && \
+    CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o unified-tokenizer .
 
 # Final stage
 FROM alpine:latest
