Add card distributor and response tokenization infrastructure
- Create card-distributor service with static card data API
- Add RESPMOD support to unified tokenizer ICAP server
- Configure Squid to tokenize responses from external APIs
- Add import-cards page and API to dummy app
- Implement complete flow: App → Squid → Distributor → RESPMOD tokenization

This demonstrates response tokenization architecture where:
- External APIs return raw card data
- Squid intercepts responses and sends to ICAP
- ICAP tokenizes cards before reaching the application
- Application stores only tokens, never raw card numbers

Note: ICAP RESPMOD parsing needs refinement for production use

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,7 @@ services:
     container_name: dummy-ecommerce-app
     environment:
       PAYMENT_GATEWAY_URL: http://payment-gateway:9000
+      CARD_DISTRIBUTOR_URL: http://card-distributor:5001
       HTTP_PROXY: http://squid:3128
       HTTPS_PROXY: http://squid:3128
     ports:
@@ -105,6 +106,7 @@ services:
     depends_on:
       - squid
       - payment-gateway
+      - card-distributor
     restart: unless-stopped
 
   # Dummy Payment Gateway
@@ -113,6 +115,16 @@ services:
     container_name: dummy-payment-gateway
     ports:
       - "9000:9000"
+    networks:
+      - tokenshield-net
+    restart: unless-stopped
+
+  # Card Distributor - Third-party API that returns raw card data
+  card-distributor:
+    build: ./card-distributor
+    container_name: card-distributor-api
+    ports:
+      - "5001:5001"
     networks:
       - tokenshield-net
     restart: unless-stopped
