--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -11,6 +11,7 @@ acl Safe_ports port 80      # http
 acl Safe_ports port 443     # https
 acl Safe_ports port 5000    # payment gateway
 acl Safe_ports port 9000    # payment gateway
+acl Safe_ports port 5001    # card distributor
 acl CONNECT method CONNECT
 
 # Local network access
@@ -31,9 +32,13 @@ icap_service_revival_delay 30
 icap_preview_enable off
 icap_persistent_connections on
 
-# Request modification service (detokenization)
+# Request modification service (detokenization for outbound requests)
 icap_service tokenshield_req reqmod_precache bypass=0 icap://unified-tokenizer:1344/reqmod
 adaptation_access tokenshield_req allow all
+
+# Response modification service (tokenization for inbound responses)
+icap_service tokenshield_resp respmod_precache bypass=0 icap://unified-tokenizer:1344/respmod
+adaptation_access tokenshield_resp allow all
 
 # Log ICAP transactions for debugging
 icap_log /var/log/squid/icap.log
@@ -52,6 +57,7 @@ acl payment_providers dstdomain .adyen.com
 acl payment_providers dstdomain .square.com
 acl payment_providers dstdomain .authorize.net
 acl payment_providers dstdomain payment-gateway  # Our dummy gateway
+acl payment_providers dstdomain card-distributor  # Our card distributor
 
 # Deny everything else
 http_access deny all
