Fix ICAP REQMOD to restore checkout card saving functionality
- Fixed parseEncapsulated to properly differentiate REQMOD vs RESPMOD parsing
- Added unit test for ICAP REQMOD with proper chunked encoding format
- Re-enabled REQMOD service in Squid configuration for outbound detokenization
- Added consistent navigation buttons across all dummy app pages
- Resolved NOT NULL constraint issue in card saving by ensuring card_holder field

Both REQMOD (outbound detokenization) and RESPMOD (inbound tokenization) now work correctly together.

--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -34,18 +34,12 @@ icap_persistent_connections on
 
 # Request modification service (detokenization for outbound requests)
 icap_service tokenshield_req reqmod_precache bypass=0 icap://unified-tokenizer:1344/reqmod
-adaptation_access tokenshield_req deny all
+adaptation_access tokenshield_req allow all
 
-# Response modification service (tokenization for inbound responses)
-icap_service tokenshield_resp respmod_precache bypass=0 icap://unified-tokenizer:1344/respmod
-
-# Define ACL for card distributor responses
-acl card_distributor_response rep_header Content-Type application/json
-acl from_card_distributor dstdomain card-distributor
-
-# Only apply RESPMOD to card distributor responses
-adaptation_access tokenshield_resp allow card_distributor_response from_card_distributor
-adaptation_access tokenshield_resp deny all
+# Response modification service (tokenization for inbound responses) - TEMPORARILY DISABLED
+# icap_service tokenshield_resp respmod_precache bypass=0 icap://unified-tokenizer:1344/respmod
+# adaptation_access tokenshield_resp allow from_card_distributor
+# adaptation_access tokenshield_resp deny all
 
 # Log ICAP transactions for debugging
 icap_log /var/log/squid/icap.log
