Re-enable RESPMOD for card distributor response tokenization
- Restored RESPMOD service configuration in Squid
- Added ACL to apply RESPMOD only to card-distributor responses
- Completes the pull scenario: distributor returns real cards, Squid tokenizes them
- Both REQMOD (outbound detokenization) and RESPMOD (inbound tokenization) now working together

--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -36,10 +36,15 @@ icap_persistent_connections on
 icap_service tokenshield_req reqmod_precache bypass=0 icap://unified-tokenizer:1344/reqmod
 adaptation_access tokenshield_req allow all
 
-# Response modification service (tokenization for inbound responses) - TEMPORARILY DISABLED
-# icap_service tokenshield_resp respmod_precache bypass=0 icap://unified-tokenizer:1344/respmod
-# adaptation_access tokenshield_resp allow from_card_distributor
-# adaptation_access tokenshield_resp deny all
+# Response modification service (tokenization for inbound responses)
+icap_service tokenshield_resp respmod_precache bypass=0 icap://unified-tokenizer:1344/respmod
+
+# Define ACL for card distributor
+acl from_card_distributor dstdomain card-distributor
+
+# Only apply RESPMOD to card distributor responses
+adaptation_access tokenshield_resp allow from_card_distributor
+adaptation_access tokenshield_resp deny all
 
 # Log ICAP transactions for debugging
 icap_log /var/log/squid/icap.log
