Add configurable token formats and fix token detection
- Add TOKEN_FORMAT environment variable supporting 'prefix' and 'luhn' formats
- Implement Luhn-valid token generation using 9999 prefix
- Fix dummy-app to recognize both tok_ and 9999 prefixed tokens
- Update documentation with token format configuration
- Fix saved card detection to work with both token formats

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,12 @@
 # Generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
 ENCRYPTION_KEY=your-256-bit-base64-encoded-key-here
 
+# Token format configuration
+# Options:
+# - "prefix" (default): Generates tokens like "tok_abc123..." 
+# - "luhn": Generates tokens that look like valid credit cards (9999xxxxxxxxxxxx)
+TOKEN_FORMAT=prefix
+
 # Your application endpoint where tokenized requests will be forwarded
 APP_ENDPOINT=http://dummy-ecommerce-app:8000
 
