Add KEK/DEK encryption support to tokenizer
- Add encryption_keys and key_rotation_log tables to schema
- Integrate KeyManager for KEK/DEK encryption in unified tokenizer
- Add USE_KEK_DEK environment variable (default: false)
- Auto-generate KEK and DEK on first run when enabled
- Use AES-GCM encryption instead of Fernet when KEK/DEK is enabled
- Add key status API endpoints for monitoring
- Store DEK reference with each encrypted card

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,12 @@ ENCRYPTION_KEY=your-256-bit-base64-encoded-key-here
 # - "luhn": Generates tokens that look like valid credit cards (9999xxxxxxxxxxxx)
 TOKEN_FORMAT=prefix
 
+# KEK/DEK encryption (Key Encryption Key / Data Encryption Key)
+# Options:
+# - "false" (default): Use simple Fernet encryption
+# - "true": Use KEK/DEK with key rotation support
+USE_KEK_DEK=false
+
 # Your application endpoint where tokenized requests will be forwarded
 APP_ENDPOINT=http://dummy-ecommerce-app:8000
 
