--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       ICAP_PORT: 1344
       DEBUG_MODE: "1"
       TOKEN_FORMAT: ${TOKEN_FORMAT:-prefix}  # "prefix" for tok_ format, "luhn" for Luhn-valid format
+      USE_KEK_DEK: ${USE_KEK_DEK:-false}     # "true" to enable KEK/DEK encryption
     depends_on:
       mysql:
         condition: service_healthy
