Add web GUI dashboard with CORS-enabled API integration
- Create complete web dashboard with modern HTML/CSS/JavaScript interface
- Add token management, API key management, activity monitoring, and statistics
- Implement Docker support with Nginx for production deployment
- Add CORS middleware to unified tokenizer API for browser compatibility
- Integrate GUI service into docker-compose on port 8081
- Include comprehensive documentation and responsive design

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,6 +131,18 @@ services:
       - tokenshield-net
     restart: unless-stopped
 
+  # TokenShield GUI Dashboard
+  tokenshield-gui:
+    build: ./gui
+    container_name: tokenshield-gui
+    ports:
+      - "8081:80"
+    networks:
+      - tokenshield-net
+    depends_on:
+      - unified-tokenizer
+    restart: unless-stopped
+
 networks:
   tokenshield-net:
     driver: bridge
