Update .env.example for session-based authentication
- Remove ADMIN_SECRET (no longer used with session-based auth)
- Clarify ENCRYPTION_KEY is only used when KEK/DEK is disabled
- Mark ENCRYPTION_KEY as legacy option

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# Encryption key for credit card data (base64 encoded 32-byte key)
+# Legacy encryption key for credit card data (base64 encoded 32-byte key)
+# NOTE: Only used when USE_KEK_DEK=false. When KEK/DEK is enabled, keys are managed automatically.
 # Generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
 ENCRYPTION_KEY=your-256-bit-base64-encoded-key-here
 
@@ -16,9 +17,6 @@ USE_KEK_DEK=false
 
 # Your application endpoint where tokenized requests will be forwarded
 APP_ENDPOINT=http://dummy-ecommerce-app:8000
-
-# Admin secret for creating API keys
-ADMIN_SECRET=change-this-admin-secret
 
 # MySQL settings (optional, defaults are in docker-compose.yml)
 MYSQL_ROOT_PASSWORD=rootpassword123
