Add comprehensive test suite for TokenShield system
- Add master test runner (run_tests.sh) with full system validation
- Add integration test suite (test_integration.sh) covering all flows
- Add Go unit tests (main_test.go) for core tokenization functions
- Add ICAP protocol tests (icap_test.go) for detokenization
- Add TEST_MODE environment variable to bypass rate limiting during tests
- Update docker-compose.yml to support test mode configuration
- Update unified tokenizer to check TEST_MODE for rate limiting bypass

Test Coverage:
- System health and database consistency
- End-to-end tokenization and detokenization flows
- API authentication and endpoint validation
- Card storage, token formats, and performance testing
- Error handling and edge cases
- All 4 card types (Visa, Mastercard, Amex, Discover)

All 31 tests passing - system ready for safe refactoring

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       DEBUG_MODE: "1"
       TOKEN_FORMAT: ${TOKEN_FORMAT:-prefix}  # "prefix" for tok_ format, "luhn" for Luhn-valid format
       USE_KEK_DEK: ${USE_KEK_DEK:-true}      # "true" to enable KEK/DEK encryption
+      TEST_MODE: ${TEST_MODE:-false}         # Set to true to disable rate limiting for testing
     depends_on:
       mysql:
         condition: service_healthy
